# aiotrans

./: README.md  example.py  pyproject.toml  tets.py
aiogt/: __init__.py  enums.py  translaitor.py  utils.py
aiogt/cache/: __init__.py  cache.py
aiogt/cache/storage/: __init__.py  base.py  memory_storage.py
aiogt/transport/: __init__.py  aiohttp_t.py  base.py  httpx_t.py
